--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -8,10 +8,28 @@
   <!-- Add additional CSS in static file -->
   {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  {% block extra_js %}
+    <script src="{% static 'js/contact_us.js' %}"></script>
+  {% endblock %}
 </head>
 
 
 <body>
+
+{% if messages %}
+    <div class="row">
+        <div class="col-sm-12">
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} alert-dismissible text-center" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                         <strong>{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error{% else %}
+                             {{ message.tags|title }}{% endif %}!</strong> {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+{% endif %}
+
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e6e6fa;">
 
   <div class="container-fluid">
@@ -28,6 +46,10 @@
 
         <li class="nav-item">
           <a class="nav-link" href="{% url 'authors' %}">All authors</a>
+        </li>
+
+        <li class="nav-item">
+             <a class="nav-link js-contact" href="{% url 'contact' %}">Contact Us</a>
         </li>
 
         {% if perms.catalog.can_mark_returned %}
@@ -60,6 +82,14 @@
   </div>
 </nav>
 
+{% block modal %}
+     <div class="modal fade" id="contact">
+         <div class="modal-dialog">
+             <div class="modal-content">
+             </div>
+         </div>
+     </div>
+{% endblock %}
 
 <div class="container-fluid">
     <div class="row">
